--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -82,6 +82,33 @@
 
 }
 
+    
+    /*Hero Section Layout*/
+@include respond-to(md) {
+    .hero__container--md {
+        display: grid;
+        width: 100%;
+        height: 100vh;
+        margin: 0 20px;
+        scroll-snap-align: start;
+        justify-items: center;
+        justify-content: center;
+        align-content: center;
+        overflow: hidden;
+    
+
+        /*Main Hero Logo Image*/
+        img {
+            width: 100%;
+            height: auto;
+            min-height: 150px;
+            image-rendering: optimizeQuality;
+            object-fit: cover;
+            align-self: center;
+        }
+    }
+}
+
 
 
 // .header__hero {
