--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,18 +3,19 @@
 // -------------- //
 
 #footer__licence {
-    position: relative;
-    bottom: 2px;
+    position: static;
+    display: inline-block;
+    bottom: 0;
+    left: 0;
     height: 20px;
     width: 100%;
-    margin: 0;
+    
     font-family: $base-font-family;
     font-size: 0.8rem;
     font-weight: 400;
     padding: 5px;
     color: $text-color;
     background-color: $primary-color;
-    justify-content: center;
-    align-content: center;
+    
     z-index: 100;
 }
