--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -2,12 +2,20 @@
 // Typography //
 //============//
 
+:root {
+  font-family: Inter, sans-serif;
+  font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
+}
+@supports (font-variation-settings: normal) {
+  :root { font-family: InterVariable, sans-serif; }
+}
+
 
 // --------- //
 // Variables //
 // --------- //
 
-$base-font-family: "League Spartan", sans-serif;
+$base-font-family: Inter, sans-serif;
 $logo-font: "Abril Fatface", serif;
 $base-font-size: 16px;
 $base-font-weight: 400;
