--- a/scss/components/_contact.scss
+++ b/scss/components/_contact.scss
@@ -15,6 +15,7 @@
     grid-template-columns: 100%;
     grid-template-rows: 30px 30px 30px 0.7fr 60px;
     gap: 0px 0px;
+    margin: 10px;
     grid-auto-flow: row;
     grid-template-areas:
 
@@ -36,14 +37,16 @@
         margin-top: 10px;
         margin-bottom: 10px;
         font-family: $base-font-family;
-        font-size: 1.1rem;
-        font-weight: 400;
-        letter-spacing: 0.1rem;
+        font-size: 1rem;
+        font-weight: 500;
+        letter-spacing: 0.05rem;
+        
 
         span {
             background-color: $primary-color;
             padding: 5px;
             border-radius: 6px;
+            box-shadow: 5px 5px 0 darken($primary-color, 10%);
          }
     }
 
@@ -56,9 +59,9 @@
         margin-left: 7px;
         
 
-        font-size: 1.2rem;
+        font-size: 0.9rem;
         font-weight: 500;
-        letter-spacing: 1.5px;
+        letter-spacing: 1px;
 
             // span {
                 
@@ -82,9 +85,9 @@
         margin-top: 35px;
         margin-left: 5px;
 
-        font-size: 1.3rem;
+        font-size: 1rem;
         font-weight: 500;
-        letter-spacing: 1.5px;
+        letter-spacing: 1px;
         
             i {
                 font-size: 1.4rem;
@@ -232,149 +235,182 @@
 /*--------------------------------*/
 
 
-// .contact__container {
-    
-//     position: relative; 
-//     scroll-snap-align: start;
-//     height: 100%;
-//     width: 100%;
-//     margin-top: 20px;
-//     margin-bottom: 50px;
-//     background-color: $background-color;
-//     color: $text-color;
-//     font-family: $base-font-family;
-//     @include respond-to(md) {
-//         width: calc(100% - 150px);
-//         margin-left: 150px;
-//     }
 
-//     h2 {
-//         position: relative;
-//         top: 0;
-//         left: 20px;
-//         font-size: 2rem;
-//         font-weight: 500;
-//         line-height: 4rem;
-//         letter-spacing: 0.1rem;
-//     }
+        .contact__container--md {
 
+            @include respond-to(md) {
+            /*Medium Devices Contact Grid*/  
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: 30px 30px 30px 0.7fr;
+            gap: 0px 0px;
+            margin: 10px;
+            margin-right: 40px;
+            grid-auto-flow: row;
+            grid-template-areas:
 
-//     .icon__phone {
-//         position: relative;
-//         top: 0;
-//         float: left;
-//         margin-left: 22px;
-//         font-size: 1rem;
-//         font-weight: 600;
-//         letter-spacing: 1px;
+                /*Grid Layout*/
 
-//         i {
-//             font-size: 1.5rem;
-//         }
-//     }
+                "contact__heading--md"
+                "contact__phone--md"
+                "contact__email--md"
+                "contact__form--md";
+            
+        
 
-//     .icon__email {
-//         position: relative;
-//         top: 0;
-//         float: left;
-//         margin-left: 20px;
-//         font-size: 1.25rem;
-//         font-weight: 500;
-//         letter-spacing: 1px;
+            /*Heading*/
+            .contact__header--md {
+                grid-area: contact__heading--md;
+                scroll-snap-align: start;
+                align-self: center;
+                justify-self: left;
+                margin-top: 10px;
+                margin-bottom: 10px;
+                font-family: $base-font-family;
+                font-size: 1rem;
+                font-weight: 500;
+                letter-spacing: 0.05rem;
+                
 
-//         i {
-//             font-size: 1.5rem;
-//         }
-//     }
+                span {
+                    background-color: $primary-color;
+                    padding: 5px;
+                    border-radius: 6px;
+                    box-shadow: 5px 5px 0 darken($primary-color, 10%);
+                }
+            }
 
-//     .contact__form {
-//         position: relative;
-//         left: calc(50% - 200px);
-//         width: 100%;
-//         max-width: 400px;
-//         padding: 20px;
-//         margin-top: 70px;
-//         margin-bottom: 90px;
-//         box-shadow: $box-shadow;
-//         border-radius: 8px;
-//         background-color: $background-color;
-    
-//         .form {
-//             input[type="text"],
-//             input[type="email"],
-//             textarea {
-//                 width: 100%;
-//                 padding: 12px 15px;
-//                 margin-bottom: 15px;
-//                 border: 2px solid $primary-color;
-//                 border-radius: 3px;
-//                 box-sizing: border-box;
-//                 font-size: 1em;
-//                 font-family: $base-font-family;
-//                 background-color: transparent;
-//                 transition: all 0.3s ease;
-    
-//                 &::placeholder {
-//                     color: lighten($text-color, 25%);
-//                     font-family: $base-font-family;
-//                     letter-spacing: 1px;
-//                 }
+            /*Phone Icon Link*/
+            .contact__phone--md {
+                grid-area: contact__phone--md;
+                align-self: center;
+                justify-self: left;
+                margin-top: 35px;
+                margin-left: 7px;
+                
 
-//                 &:focus {
-//                     border-color: lighten($primary-color, 10%);
-//                     outline: none;
-//                 }
-//             }
-    
-//             button {
-//                 width: 100%;
-//                 padding: 12px;
-//                 background-color: darken($primary-color, 10%);
-//                 border: none;
-//                 border-radius: 6px;
-//                 color: $background-color;
-//                 font-size: 16px;
-//                 cursor: pointer;
-//                 margin-top: 10px;
-    
-//                 &:hover {
-//                     background-color: lighten($primary-color, 1%);
-//                     color: darken($background-color, 5%);
-//                 }
-//             }
-//         }
-//     }
+                font-size: 0.9rem;
+                font-weight: 500;
+                letter-spacing: 1px;
 
+                    // span {
+                        
+                        
+                    //     border-radius: 2px;
+                    //     padding: 10px;
+                    //     background-color: $primary-color;
+                    //     box-shadow: 20px 25px 0 darken($primary-color, 10%);              
+                    // }
+                
+                    i {
+                        font-size: 1.5rem;
+                    }
+            }
 
+            /*Email Icon Link*/
+            .contact__email--md {
+                grid-area: contact__email--md;
+                align-self: center;
+                justify-self: left;
+                margin-top: 35px;
+                margin-left: 5px;
 
+                font-size: 1rem;
+                font-weight: 500;
+                letter-spacing: 1px;
+                
+                    i {
+                        font-size: 1.4rem;
+                    }
+            }
 
-//     .footer__top {
-//         @include respond-to(md) {
-//             display: none;
-//         }
-//         position: relative; 
-//         bottom: 60px;
-//         left: 0;  
-//         width: 100%;
-//         margin-top: 0;
-//         text-align: center;
-//         font-family: $base-font-family;
-//         font-size: 1.25rem;
-//         font-weight: 500;
-//         color: $text-color;
-       
-//         animation: bounce 3s infinite;
-//         @keyframes bounce {
-//             0%, 20%, 50%, 80%, 100% {
-//                 transform: translateY(0);
-//             }
-//             40% {
-//                 transform: translateY(-10px);
-//             }
-//             60% {
-//                 transform: translateY(-5px);
-//             }
-//         }
-//     }
-// }
+            /*Medium Devices Contact Form*/
+            .contact__form--md { 
+                grid-area: contact__form--md;
+                background-color: $background-color;
+                box-shadow: $box-shadow;
+                border-radius: 8px;
+                margin-top: 20px;
+                padding: 10px;
+            
+                .form {
+                    display: grid;
+                    grid-template-columns: 1fr;
+                    grid-template-rows: 40px 40px 40px 40px 200px 50px;
+                    gap: 10px 10px;
+                    grid-auto-flow: row;
+                    grid-template-areas:
 
+                        /*Form Grid Layout*/
+                    
+                        "form__firstname--md"
+                        "form__lastname--md"
+                        "form__email--md"
+                        "form__subject--md"
+                        "form__message--md"
+                        "form__submit--md";
+
+                    /*First Name Input*/
+                    .form__firstname--md {
+                        grid-area: form__firstname--md;
+
+                        @include form-style();
+                    }
+
+                    /*Last Name Input*/
+                    .form__lastname--md {
+                        grid-area: form__lastname--md;
+
+                        @include form-style();
+                    }
+
+                    /*Email Input*/
+                    .form__email--md {
+                        grid-area: form__email--md;
+
+                        @include form-style();
+                    }
+
+                    /*Subject Input*/
+                    .form__subject--md {
+                        grid-area: form__subject--md;
+
+                        @include form-style();
+                    }
+
+                    /*Message Text Area Input*/
+                    .form__message--md {
+                        grid-area: form__message--md;
+
+                        @include form-style();
+                        margin-top: 10px;
+                    }
+
+                    /*Submit Button*/
+                    .form__submit--md {
+                        display: grid;
+                        grid-area: form__submit--md;
+                        
+                        width: 200px;
+                        align-self: center;
+                        justify-self: center;
+                        padding: 12px;
+                        background-color: darken($primary-color, 10%);
+                        border: none;
+                        border-radius: 6px;
+                        color: $background-color;
+                        font-size: 16px;
+                        cursor: pointer;
+                        margin-top: 10px;
+                            
+                            &:hover {
+                                background-color: lighten($primary-color, 1%);
+                                color: darken($background-color, 5%);
+                            }
+                    }
+                }
+            }
+
+        }
+
+}
