--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -1,53 +1,72 @@
 // --------- //
 // Side Menu //
 // --------- //
-
-.menu__container {  
-    display: none;
-
+@include respond-to(sm) {
+  display: none;
+}
+  
     @include respond-to(md) {
+      .menu__container {
+          position: fixed;
+          top: 0;
+          height: 100vh;
           grid-row-start: 1;
           grid-row-end: 6;
           display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
-          grid-template-rows: 0.5fr 2fr 0.5fr;
+          grid-template-columns: 1fr;
+          grid-template-rows: 100px 360px 0.33fr;
           gap: 0px 0px;
+          width: 150px;
           grid-auto-flow: row;
           grid-template-areas:
           
-          "menu__logo menu__logo menu__logo"
-          "menu__links menu__links menu__links"
-          "menu__socials menu__socials menu__socials";
+          "menu__logo"
+          "menu__links"
+          "menu__socials";
 
           font-family: $base-font-family; 
           border-right: 3px solid $primary-color;  
           background-color: $background-color; 
-          padding: 20px;
+          padding: 10px;
           box-sizing: border-box;
     
             .menu__logo { 
               grid-area: menu__logo;
               margin: 0 auto;
+              align-self: start;
               padding-top: 0px;
               padding-bottom: 3px;
+              margin-top: 10px;
+              margin-bottom: 220px;
               font-family: $logo-font;  
               font-size: 3rem;
-              font-weight: 800;
+              font-weight: 400;
               line-height: 2.5rem;
-              border-top: 2px solid $text-color;
-              border-bottom: 2px solid $primary-color;
+
+              span {
+              
+               box-shadow: 0 -5px 0 $secondary-text-color,
+                           0 5px 0 darken($primary-color, 10%);
+               border-radius: 2px;
+               
+               
+              }
+              
+           
             }
     
             .menu__links {
               grid-area: menu__links;
               list-style: none;
+              align-self: flex-end;
               padding: 0;
-              margin: 0;
-              font-size: 0.925rem;
+              margin-right: 10px;
+              font-size: 1rem;
               font-weight: 600;
               text-transform: uppercase;
-              line-height: 1.25rem;
-              letter-spacing: 2px;
+              text-wrap: none;
+              line-height: 1.5rem;
+              letter-spacing: 1px;
               color: $text-color;
               
               li {
@@ -62,6 +81,13 @@
                     color: lighten($text-color, 10%);
                   }
               }
+
+              span {
+                background-color: $primary-color;
+                padding: -1px;
+                border-radius: 6px;
+                box-shadow: 5px 5px 0 darken($primary-color, 10%);
+            }
             }
 
      
@@ -92,8 +118,9 @@
                   } 
               } 
           }
-  }
-}
+        }  }
+
+
   
   
   
