--- a/scss/pages/_scs.scss
+++ b/scss/pages/_scs.scss
@@ -2,6 +2,18 @@
 // SCS Scheme //
 // ---------- // 
 
+
+.menu__burger {
+    display:block;
+
+    @include respond-to(md) {
+        display: none;
+    }
+}
+
+
+
+
 .scs__container {
     min-height: 100vh;
     width: 100%;
