--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -116,113 +116,145 @@ body {
                 
             } 
         }
-
+    }}
         
 
-            .about__text {
-                display: grid;
-                grid-template-columns: 1fr 1fr 1fr 1fr;
-                grid-template-rows: auto auto auto auto;
-                gap: 0;
-                height: 200px;
-                margin-left: 20%;
+    .about__text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+
+        .headline {
+            font-size: 1.2rem;
+            font-weight: 500;
+            margin-bottom: 10px;
+        }
+
+        .box-1 {
+            justify-self: center;
+            font-size: 1rem;
+            font-weight: 400;
+            margin-bottom: 10px;
+        }
+
+        .box-2 {
+            font-size: 1rem;
+            font-weight: 400;
+            margin-bottom: 10px;
+        }
+
+        .box-3 {
+            font-size: 1rem;
+            font-weight: 400;
+            margin-bottom: 10px;
+        }
+    }
+        //     .about__text {
+        //         display: grid;
+        //         grid-template-columns: 1fr 1fr 1fr 1fr;
+        //         grid-template-rows: auto auto auto auto;
+        //         gap: 0;
+        //         height: 200px;
+        //         margin-left: 20%;
                 
-                grid-template-areas: 
-                "headline headline headline"
-                "  box-1   box-1   .  "
-                "  .   box-2   box-2 "
-                "  box-3   box-3   .  "; 
+        //         grid-template-areas: 
+        //         "headline headline headline"
+        //         "  box-1   box-1   .  "
+        //         "  .   box-2   box-2 "
+        //         "  box-3   box-3   .  "; 
 
 
-            .headline {
-                display: flex;
-                text-align: left;   
-                align-self: left;
-                font-size: 2.1rem;
-                font-weight: 300;
-                margin-bottom: 10px;
-                grid-area: headline;
+        //     .headline {
+        //         display: flex;
+        //         text-align: left;   
+        //         align-self: left;
+        //         font-size: 2.1rem;
+        //         font-weight: 300;
+        //         margin-bottom: 10px;
+        //         grid-area: headline;
 
-                p {
-                    color: $text-color;
-                    font-size: 1.1rem;
-                }
+        //         p {
+        //             color: $text-color;
+        //             font-size: 1.1rem;
+        //         }
 
-                span {
-                    background-color: darken($background-color, 5%);
-                    border-radius: 4px;
+        //         span {
+        //             background-color: darken($background-color, 5%);
+        //             border-radius: 4px;
                    
-                    padding: 5px;
-                }
-            }    
+        //             padding: 5px;
+        //         }
+        //     }    
 
-            .box-1 { 
-                grid-area: box-1; 
-                margin-bottom: 0;
-                margin-left: 30px;
-            }
-            .box-2 { 
-                grid-area: box-2; 
-                margin-bottom: 10px;
-            }
-            .box-3 { 
-                grid-area: box-3;
-                margin-bottom: 10px;
-                margin-left: 90px; 
-            }
+        //     .box-1 { 
+        //         grid-area: box-1; 
+        //         margin-bottom: 0;
+        //         margin-left: 30px;
+        //     }
+        //     .box-2 { 
+        //         grid-area: box-2; 
+        //         margin-bottom: 10px;
+        //     }
+        //     .box-3 { 
+        //         grid-area: box-3;
+        //         margin-bottom: 10px;
+        //         margin-left: 90px; 
+        //     }
             
-            .box-1, .box-2, .box-3 {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-                justify-content: center;
-                padding: 0;
-                border-radius: 5px;
-                background: transparent;
+        //     .box-1, .box-2, .box-3 {
+        //         display: flex;
+        //         flex-direction: row;
+        //         align-items: center;
+        //         justify-content: center;
+        //         padding: 0;
+        //         border-radius: 5px;
+        //         background: transparent;
                 
 
-                span {
-                    background-color: darken($background-color, 5%);
+        //         span {
+        //             background-color: darken($background-color, 5%);
                     
-                    border-radius: 4px;
-                    padding: 5px;
+        //             border-radius: 4px;
+        //             padding: 5px;
                     
                     
-                }
+        //         }
                   
-            }
+        //     }
 
-            // .box-1:hover, .box-2:hover, .box-3:hover {
-            //     transform: scale(1.2);
-            //     transition: transform 0.4s ease;
+        //     // .box-1:hover, .box-2:hover, .box-3:hover {
+        //     //     transform: scale(1.2);
+        //     //     transition: transform 0.4s ease;
                 
-            // }
+        //     // }
             
-            .box-1 {
-                margin-bottom: 7px;
-                margin-left: 30px;
-            }
+        //     .box-1 {
+        //         margin-bottom: 7px;
+        //         margin-left: 30px;
+        //     }
 
-            .box-2 {
-                margin-bottom: 10px;
-            }
+        //     .box-2 {
+        //         margin-bottom: 10px;
+        //     }
 
-            .box-3 {
-                margin-bottom: 10px;
-                margin-left: 90px;
-            }
-            p {
-                font-size: .9rem;
-                font-weight: 600;
-                line-height: 1.6; 
-                color: $text-color; 
-            }
+        //     .box-3 {
+        //         margin-bottom: 10px;
+        //         margin-left: 90px;
+        //     }
+        //     p {
+        //         font-size: .9rem;
+        //         font-weight: 600;
+        //         line-height: 1.6; 
+        //         color: $text-color; 
+        //     }
               
 
-            }   
+        //     }   
     
-            }  
-        }
+        //     }  
+        // }
 
 
 
