--- a/scss/pages/_scs.scss
+++ b/scss/pages/_scs.scss
@@ -42,7 +42,7 @@
         align-content: center;
         justify-content: center;
         max-width: 600px;
-        margin-top: 20px;
+        margin-top: 40px;
         margin-right: 40px;
         padding: 20px 20px;
         text-align: justify;
@@ -54,12 +54,18 @@
             font-weight: 500;
             letter-spacing: 1px;
             margin-bottom: 10px;
+
+            span {
+                background-color: $primary-color;
+                box-shadow: 5px 5px 0 darken($primary-color, 10%);
+                border-radius: 4px;
+            }
         }
 
         p {
             font-size: 1.1rem;
             font-weight: 400;
-            letter-spacing: .1px;
+            letter-spacing: .3px;
             margin-bottom: 20px;
         }
     }
@@ -80,17 +86,25 @@
         width: calc(100% - 50px);
         padding: 20px 20px;
 
-        h3 {
-            font-size: 1.2rem;
+        h1 {
+            text-transform: uppercase;
+            font-size: 1.25rem;
             font-weight: 500;
-            letter-spacing: .5px;
+            letter-spacing: 1px;
             margin-bottom: 10px;
+
+            span {
+                background-color: $primary-color;
+                box-shadow: 5px 5px 0 darken($primary-color, 10%);
+                border-radius: 4px;
+            }
         }
 
         p {
-            text-align: justify;
-            font-size: 1rem;
+            
+            font-size: 1.1rem;
             font-weight: 400;
+            letter-spacing: .3px;
             margin-bottom: 50px;
         }
 
