--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -10,13 +10,17 @@
   :root { font-family: InterVariable, sans-serif; }
 }
 
+@font-face {
+  font-family: "Bogart Medium";
+  src: url(/assets/typography/bogart__medium.TTF)
+}
 
 // --------- //
 // Variables //
 // --------- //
 
 $base-font-family: Inter, sans-serif;
-$logo-font: "Abril Fatface", serif;
+$logo-font: "Bogart Medium", serif;
 $base-font-size: 16px;
 $base-font-weight: 400;
 
