--- a/scss/base/_grid.scss
+++ b/scss/base/_grid.scss
@@ -10,7 +10,7 @@
     
     display: grid;
     grid-template-columns: 1fr; 
-    grid-template-rows: 1fr 1fr auto 20px; 
+    grid-template-rows: .5fr 1fr .25fr 20px; 
     gap: 0px 0px; 
     grid-template-areas: 
         "hero__container--xs"
@@ -20,21 +20,21 @@
 
     .hero__container--xs { 
         grid-area: hero__container--xs;
-        margin: 10px; 
+       
     }
 
     .project__container--xs {
         grid-area: project__container--xs; 
-        margin: 10px;
-        margin-right: 40px; 
+       
+        
     }
 
     .contact__container--xs {
         grid-area: contact__container--xs;
-        margin: 10px; 
+        
     }
 
-    #footer__licence {
+    .footer__licence {
         grid-area: footer__licence;
     }
 }
@@ -51,15 +51,13 @@
     display: grid; 
     grid-auto-columns: 1fr; 
     grid-template-columns: 150px 1fr; 
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 20px; 
+    grid-template-rows: 1fr 1fr 1fr 30px; 
     gap: 10px 10px;
-    margin: 0 20px;
+    margin: 0 auto;
     width: 100%; 
     min-height: 100vh;
     grid-template-areas: 
       "menu__container hero__container--md"
-      "menu__container hero__container--md"
-      "menu__container project__container--md"
       "menu__container project__container--md"
       "menu__container contact__container--md"
       "footer__licence footer__licence"; 
@@ -71,18 +69,21 @@
   }
 
   .hero__container--md {
-    grid-area: hero__container--md; 
+    grid-area: hero__container--md;
+    
   }
 
   .project__container--md {
     grid-area: project__container--md;
+   
   }
 
   .contact__container--md {
     grid-area: contact__container--md;
+    
   }
 
-  #footer__licence {
+  .footer__licence {
      grid-area: footer__licence;
   }
 
