--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -9,16 +9,18 @@
     display: grid;
     width: 100%;
     height: calc(100vh - 30px);
-    margin: 0 20px;
+    margin: 0 auto;
     scroll-snap-align: start;
-    justify-items: center;
-    justify-content: center;
-    align-content: center;
+    place-items: center;
+    // justify-items: center;
+    // justify-content: center;
+    // align-content: center;
     overflow: hidden;
     grid-template-rows: 1fr auto;
 
     /*Main Hero Logo Image*/
     img {
+        margin-left: 40px;
         width: 100%;
         height: auto;
         min-height: 150px;
@@ -90,82 +92,22 @@
         width: 100%;
         height: 100vh;
         margin: 0 20px;
+        margin-top: 180px;
         scroll-snap-align: start;
-        justify-items: center;
-        justify-content: center;
-        align-content: center;
+        place-items: center;
         overflow: hidden;
     
 
         /*Main Hero Logo Image*/
         img {
-            width: 100%;
-            height: auto;
+            width: 80%;
             min-height: 150px;
             image-rendering: optimizeQuality;
             object-fit: cover;
             align-self: center;
+            justify-self: center;
         }
     }
 }
 
 
-
-// .header__hero {
-//     display: flex;
-//     flex-direction: column;
-//     flex-wrap: nowrap;
-//     flex: 1;
-//     white-space: nowrap;
-//     position: relative;
-//     width: 100%;
-//     min-height: 100vh; 
-//     background-size: cover;
-//     background-position: center;
-//     background-repeat: no-repeat;
-
-//     @include respond-to(md) {
-//         width: calc(100% - 150px);
-//         margin-left: 150px;
-//     }
-
-//    img {
-//     position: absolute;
-//     top: 145px;
-//     left: 20px;
-//     max-width: 100%;    
-//     height: auto;
-
-//    }
-// }
-
-// .header__down {
-//     @include respond-to(md) {
-//         display: none;
-//     }
-//     position: absolute;
-//     bottom: 20px;
-//     left: calc(50% - 48px);
-//     text-align: center;
-//     font-family: $base-font-family;
-//     font-size: 1.25rem;
-//     font-weight: 500;
-//     color: $text-color;
-//     animation: bounce 3s infinite;
-//     @keyframes bounce {
-//         0%, 20%, 50%, 80%, 100% {
-//             transform: translateY(0);
-//         }
-//         40% {
-//             transform: translateY(-10px);
-//         }
-//         60% {
-//             transform: translateY(-5px);
-//         }
-//     }
-
-//     i {
-//         justify-self: center;
-//     }
-
-// }
