--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -1,9 +1,11 @@
 // --------- //
 // Side Menu //
 // --------- //
-@include respond-to(sm) {
-  display: none;
-}
+    @include respond-to(sm) {
+      .menu__container {
+        display: none;
+      }
+    }
   
     @include respond-to(md) {
       .menu__container {
@@ -16,7 +18,7 @@
           grid-template-columns: 1fr;
           grid-template-rows: 100px 360px 0.33fr;
           gap: 0px 0px;
-          width: 150px;
+          width: 170px;
           grid-auto-flow: row;
           grid-template-areas:
           
@@ -31,27 +33,23 @@
           box-sizing: border-box;
     
             .menu__logo { 
+              display: grid;
+              place-items: center;
               grid-area: menu__logo;
               margin: 0 auto;
               align-self: start;
-              padding-top: 0px;
-              padding-bottom: 3px;
+              
               margin-top: 30px;
               margin-bottom: 220px;
+              margin-right: 10px;
               font-family: $logo-font;  
-              font-size: 3rem;
+              font-size: 2.5rem;
               font-weight: 400;
-              line-height: 2.5rem;
-
-              span {
-              
-               box-shadow: 0 -5px 0 $secondary-text-color,
-                           0 5px 0 darken($primary-color, 10%);
-               border-radius: 2px;
-               
-               
-              }
-              
+              line-height: 5rem;
+              border-top: 4px solid $primary-color;
+              border-bottom: 4px solid $primary-color-dark;
+              border-radius: 50%;
+              opacity: 0.8;
            
             }
     
@@ -69,25 +67,25 @@
               letter-spacing: 1px;
               color: $text-color;
               
-              li {
-                  margin-bottom: 15px;
-              }
+                li {
+                    margin-bottom: 15px;
+                }
 
-              a {
-                text-decoration: none;
-                
-                
-                  &:hover {
-                    color: lighten($text-color, 10%);
-                  }
-              }
+                a {
+                  text-decoration: none;
+                  
+                  
+                    &:hover {
+                      color: lighten($text-color, 10%);
+                    }
+                }
 
-              span {
-                background-color: $primary-color;
-                padding: -1px;
-                border-radius: 6px;
-                box-shadow: 5px 5px 0 darken($primary-color, 10%);
-            }
+                span {
+                  background-color: $primary-color;
+                  padding: -1px;
+                  border-radius: 6px;
+                  box-shadow: 5px 5px 0 darken($primary-color, 10%);
+              }
             }
 
      
@@ -117,8 +115,23 @@
                     align-items: center;        
                   } 
               } 
-          }
-        }  }
+           }
+      }  
+    }
+
+    .menu__container{
+      @include respond-to(lg) {
+        display: block;
+      }
+
+      @include respond-to(xl) {
+        display: block;
+      }
+    }
+
+   
+
+  
 
 
   
