--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -6,114 +6,81 @@
 /*Small Devices Project Container*/
 /*-------------------------------*/
 
-.project__container--xs {  
-      display: grid;
-      scroll-snap-align: start;
-   /*Heading*/
-   h3 {
-   grid-area: project__h3;
-   align-self: center;
-   justify-self: center;
-   margin-bottom: 20px;
-   font-size: 1.8rem;
-   font-weight: 700;
-   letter-spacing: 0.1rem;
-   color: $text-color;
-
-      span {
-         background-color: $primary-color;
-         padding: 5px;
-         border-radius: 6px;
-         box-shadow: 5px 5px 0 darken($primary-color, 10%);
-         
-      }
-   }
-
-    /*Small Devices Project Grid*/  
-   
-   grid-template-columns: repeat auto-fit, minmax(100px, 400px);
-   grid-template-rows: 50px repeat(10, 1fr) 50px;
-   gap: 10px;
+.project__container--xs {
+   @include respond-to(xs, sm) {
+      
+   display: flex;
+   flex-direction: column;
    width: 100%;
    height: auto;
+   margin: 0 auto;
+   padding: 10px;
+   align-items: center;
    justify-content: center;
-   align-content: stretch;
-   grid-auto-flow: row;
-   grid-template-areas:
-
-   /*Grid Layout*/
-   "project__h3 project__h3"
-   "project__card--1 project__card--2"
-   "project__card--1 project__card--2"
-   "project__card--3 project__card--4"
-   "project__card--3 project__card--4"
-   "project__card--5 project__card--6"
-   "project__card--5 project__card--6"
-   "project__card--7 project__card--8"
-   "project__card--7 project__card--8"
-   "project__card--9 project__card--10"
-   "project__card--9 project__card--10"
-   "project__scroll project__scroll"; 
-
-   
-
-   /*Project Grid Cards*/
-    .project__card--1 {
-       grid-area: project__card--1;
-       @include project-card('/assets/img/placeholder-typing.png');
-       }
+   gap: 10px;
   
-    .project__card--2 {
-       grid-area: project__card--2;
-       @include project-card('/assets/img/placeholder-coffee.png');
-       }
-    
-    .project__card--3 {
-       grid-area: project__card--3;
-       @include project-card('/assets/img/placeholder-design.png');
-       }
-    
-    .project__card--4 {
-       grid-area: project__card--4;
-       @include project-card('/assets/img/placeholder-pc.png');
-       }
-    
-    .project__card--5 {
-       grid-area: project__card--5;
-       @include project-card('/assets/img/placeholder-cradle.png');
-       }
-    
-    .project__card--6 {
-       grid-area: project__card--6;
-       @include project-card('/assets/img/placeholder-work.png');
-       }
-    
-    .project__card--7 {
-       grid-area: project__card--7;
-       @include project-card('/assets/img/placeholder-closer-coffee.png');
-       }
-    
-    .project__card--8 {
-       grid-area: project__card--8;
-       @include project-card('/assets/img/placeholder-laptop.png');
-       }
-
-    .project__card--9 {
-       grid-area: project__card--9;
-       @include project-card('/assets/img/placeholder-phone.png');
-       }
-
-    .project__card--10 {
-       grid-area: project__card--10;
-       @include project-card('/assets/img/placeholder-abacus.png');
-       }
    
+         /*Heading*/
+         h3 {
+         grid-area: project__h3;
+         align-self: center;
+         justify-self: center;
+         margin-bottom: 20px;
+         font-size: 1.8rem;
+         font-weight: 700;
+         letter-spacing: 0.1rem;
+         color: $text-color;
 
-   /*Scroll Down Icon*/
-   .project__scroll {
+            span {
+               background-color: $primary-color;
+               padding: 5px;
+               border-radius: 6px;
+               box-shadow: 5px 5px 0 darken($primary-color, 10%);
+               
+            }
+         }
+
+         /*Cards*/
+         .project__card--1 {
+            width: 100%;
+            height: 250px;
+            @include project-card-xs('/assets/img/placeholder-typing.png');
+         }   
+         .project__card--2 {
+            width: 100%;
+            height: 250px;
+            @include project-card-xs('/assets/img/placeholder-coffee.png');
+         }
+         .project__card--3 {
+            width: 100%;
+            height: 250px;
+            @include project-card-xs('/assets/img/placeholder-design.png');
+         }
+         .project__card--4 {
+            width: 100%;
+            height: 250px;
+            @include project-card-xs('/assets/img/placeholder-pc.png');
+         }
+         .project__card--5 {
+            width: 100%;
+            height: 250px;
+            @include project-card-xs('/assets/img/placeholder-cradle.png');
+         }
+         .project__card--6 {
+            width: 100%;
+            height: 250px;
+            @include project-card-xs('/assets/img/placeholder-work.png');
+         }
+            
+   }
+}
+  /*Scroll Down Icon*/
+  .project__scroll {
    grid-area: project__scroll;
    align-self: center;
    justify-self: center;
+   margin-top: 40px;
+   margin-bottom: 60px;
    
       /*Icon Bouncing Animation*/
       animation: bounce 3s infinite;
@@ -140,7 +107,7 @@
    @include respond-to(md) {
       display: none;
    }
-}
+
 
 /*----------------------------------------------------------------------*/
 /*----------------------------------------------------------------------*/
@@ -156,14 +123,15 @@
 
       /*Display at 768px*/
       @include respond-to(md) {
+      margin: 0 auto;
       display: grid;
-      grid-template-columns: 2fr 2fr 2fr;
-      grid-template-rows: auto 1fr 1fr 1fr;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
       gap: 10px 10px;
       grid-auto-flow: row;
       height: auto;
-      width: 100%;
+      width: 95%;
       justify-self: center;
+      align-self: flex-start;
   
       grid-template-areas:
 
@@ -176,6 +144,7 @@
       /*Heading*/
       h3 {
          display: grid;
+         align-self: self-end;
          grid-area: project__h3;
          justify-self: left;
          margin-bottom: 20px;
@@ -241,10 +210,6 @@
                @include project-card('/assets/img/placeholder-phone.png');
                }
       
-            // .project__card--10 {
-            //    grid-area: project__card--10;
-            //    @include project-card('/assets/img/placeholder-abacus.png');
-            //    }
       }      
    }
 
