--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,20 +2,17 @@
 // Footer License //
 // -------------- //
 
-#footer__licence {
-    position: static;
-    display: inline-block;
-    top: 100%;
+.footer__licence {
+    bottom: 0;
     left: 0;
-    line-height: 0;
-    height: 15px;
-    width: 100%;
-    
+    width: 100vw;
+    height: 20px;
+    overflow: hidden;
+    padding: 2px;  
     font-family: $base-font-family;
-    font-size: 0.7rem;
-    font-weight: 400;
-    padding: 7px;
+    font-size: 0.8rem;
     color: $text-color;
-    background-color: $primary-color;
-   
+    background-color: lighten($primary-color, 10%);
+    box-shadow: 0 -2px 0 lighten($primary-color-dark, 10%); 
+    opacity: 0.7;
 }
