--- a/scss/pages/_scs.scss
+++ b/scss/pages/_scs.scss
@@ -66,7 +66,7 @@
             font-size: 1.1rem;
             font-weight: 400;
             letter-spacing: .3px;
-            margin-bottom: 20px;
+            margin-bottom: 0;
         }
     }
 
