--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -11,7 +11,7 @@
       .menu__container {
           position: fixed;
           top: 0;
-          height: 100vh;
+          height: 99vh;
           grid-row-start: 1;
           grid-row-end: 6;
           display: grid;
@@ -45,13 +45,21 @@
               font-family: $logo-font;  
               font-size: 2.5rem;
               font-weight: 400;
-              line-height: 5rem;
-              border-top: 4px solid $primary-color;
-              border-bottom: 4px solid $primary-color-dark;
-              border-radius: 50%;
-              opacity: 0.8;
-           
+              line-height: 3.5rem;
+              background-image: 
+              linear-gradient(to right, $primary-color, $primary-color), 
+              linear-gradient(to right, $primary-color, $primary-color); 
+              background-position: top center, bottom center; 
+              background-size: 50% 4px, 50% 4px; 
+              background-repeat: no-repeat; 
             }
+              
+            
+             
+              
+        
+           
+            
     
             .menu__links {
               grid-area: menu__links;
