--- a/scss/components/_projects.scss
+++ b/scss/components/_projects.scss
@@ -103,7 +103,7 @@
    }
 
 
-   /*Hide Small Devices Grid at 768px*/  
+   /*Hide Small Devices Container at 768px*/  
    @include respond-to(md) {
       display: none;
    }
@@ -118,98 +118,87 @@
 
    .project__container--md { 
 
-      /*Hide Initially*/ 
+      /*Hide >768px*/ 
       display: none;
 
       /*Display at 768px*/
       @include respond-to(md) {
       margin: 0 auto;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 10px 10px;
-      grid-auto-flow: row;
-      height: auto;
-      width: 95%;
-      justify-self: center;
-      align-self: flex-start;
-  
-      grid-template-areas:
+      grid-template-columns: repeat(2, 1fr);
+      gap: 10px;
+      width: 100%;
+      max-width: 1200px;
+      padding: 20px;
 
-      /*Grid Layout*/
-      "project__h3              .                .       "
-      "project__card--1 project__card--2 project__card--3"
-      "project__card--4 project__card--5 project__card--6"
-      "project__card--7 project__card--8 project__card--9";
+         @include respond-to(lg) {
+            grid-template-columns: repeat(3, 1fr);
+         }
+    
 
-      /*Heading*/
-      h3 {
-         display: grid;
-         align-self: self-end;
-         grid-area: project__h3;
-         justify-self: left;
-         margin-bottom: 20px;
-         font-size: 1.8rem;
-         font-weight: 700;
-         letter-spacing: 0.1rem;
-         color: $text-color;
-      
-            span {
-               width: fit-content;
-               background-color: $primary-color;
-               padding: 5px;
-               border-radius: 6px;
-               box-shadow: 10px 10px 0 darken($primary-color, 10%);
-               
-            }
+         /*Heading*/
+         h3 {
+            grid-column: 1 / -1;
+            align-self: end;
+         
+            justify-self: start;
+            margin-bottom: 20px;
+            font-size: 1.8rem;
+            font-weight: 700;
+            letter-spacing: 0.1rem;
+            color: $text-color;
+         
+               span {
+                  width: fit-content;
+                  background-color: $primary-color;
+                  padding: 5px;
+                  border-radius: 6px;
+                  box-shadow: 10px 10px 0 darken($primary-color, 10%);
+                  
+               }
          }
      
 
             /*Medium Devices Project Grid Cards*/
-            .project__card--1 {
-               grid-area: project__card--1;
+            .project__card--1 {             
                @include project-card('/assets/img/placeholder-typing.png');
                }
          
-            .project__card--2 {
-               grid-area: project__card--2;
+            .project__card--2 {             
                @include project-card('/assets/img/placeholder-coffee.png');
                }
             
-            .project__card--3 {
-               grid-area: project__card--3;
+            .project__card--3 {              
                @include project-card('/assets/img/placeholder-design.png');
                }
             
-            .project__card--4 {
-               grid-area: project__card--4;
+            .project__card--4 {              
                @include project-card('/assets/img/placeholder-pc.png');
                }
             
-            .project__card--5 {
-               grid-area: project__card--5;
+            .project__card--5 {              
                @include project-card('/assets/img/placeholder-cradle.png');
                }
             
-            .project__card--6 {
-               grid-area: project__card--6;
+            .project__card--6 {             
                @include project-card('/assets/img/placeholder-work.png');
                }
             
-            .project__card--7 {
-               grid-area: project__card--7;
+            .project__card--7 {             
                @include project-card('/assets/img/placeholder-closer-coffee.png');
                }
             
-            .project__card--8 {
-               grid-area: project__card--8;
+            .project__card--8 {              
                @include project-card('/assets/img/placeholder-laptop.png');
                }
-      
-            .project__card--9 {
-               grid-area: project__card--9;
-               @include project-card('/assets/img/placeholder-phone.png');
+            .project__card--9{
+               @include respond-to(md) {
+                  display: none;
                }
-      
+               @include respond-to(lg) {
+                  @include project-card('/assets/img/placeholder-abacus.png');
+               }
+            }   
       }      
    }
 
@@ -218,107 +207,3 @@
   
  
 
-
-
-
-// .project__container {
-
-//     margin: 20px 20px;
-//     margin-bottom: 20px;
-//     scroll-snap-align: start;
-   
-//     h3 {
-//         position: relative;
-//         font-family: $base-font-family;
-//         font-size: 1.7rem;
-//         font-weight: 500;
-//         letter-spacing: 0.5px;
-//         color: $text-color;
-//         top: 0;
-//         text-align: center;
-//         vertical-align: middle;
-//         @include respond-to(md) {
-//             margin-left: 170px;
-//             text-align: left;
-//         }
-        
-
-//     }
-
-
-//     .project__grid {
-//         display: grid;
-//         align-content: center;
-//         justify-content: center;
-//         grid-template-columns: repeat(1, 1fr);
-//         width: max-content;
-//         gap: 20px;
-//         margin: 0 auto; 
-//         margin-bottom: 20px;
-//         padding: 10px;
-//         @include respond-to(md) {
-//             grid-template-columns: repeat(3, 1fr); 
-//             grid-template-rows: repeat(3, 1fr);  
-//             gap: 20px;
-//             width: 75vw;
-//             margin-left: 150px;
-//         }   
-       
-//             .project__grid--card {
-//                 align-content: center;
-//                 background-color: transparent;
-//                 padding: 0;
-//                 border-radius: 40px;
-//                 box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-//                 cursor: pointer;
-//                 transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-//                 &:hover {
-//                     transform: translateY(-5px); 
-//                     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);  
-//                 }
-                
-//                 img {
-//                     width: 100%;
-//                     height: auto;
-//                     object-fit: cover;
-//                     border-radius: 40px;
-//                     opacity: 0.7;
-//                 }
-
-             
-//             }
-
-  
-
-//     }
-
-//     .project__down {
-//         @include respond-to(md) {
-//             display: none;
-//         }
-//         position: static; 
-//         bottom: 0;
-//         left: 0px;  
-//         width: 100%;
-//         text-align: center;
-//         font-size: 1.25rem;
-//         font-weight: 500;
-//         color: $text-color;
-//         margin-bottom: 20px;
-//         animation: bounce 3s infinite;
-//         @keyframes bounce {
-//             0%, 20%, 50%, 80%, 100% {
-//                 transform: translateY(0);
-//             }
-//             40% {
-//                 transform: translateY(-10px);
-//             }
-//             60% {
-//                 transform: translateY(-5px);
-//             }
-//         }
-//     }
-
-// }
- 
