--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -14,5 +14,5 @@
     color: $text-color;
     background-color: lighten($primary-color, 10%);
     box-shadow: 0 -2px 0 lighten($primary-color-dark, 10%); 
-    opacity: 0.7;
+    z-index: 100;
 }
