--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -49,6 +49,7 @@
     background-size: cover;
     background-position: top;
     background-repeat: no-repeat;
+    aspect-ratio: 1;
     opacity: 0.7;
 
     &:hover {
