--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -20,6 +20,7 @@
 // --------- //
 
 $base-font-family: Inter, sans-serif;
+$hero-font: "Bogart Medium", serif;
 $logo-font: "Bogart Medium", serif;
 $base-font-size: 16px;
 $base-font-weight: 400;
