--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -45,3 +45,5 @@ $edamame: #a4a483; //Edamame
 $herbal-whispers:#6b6c56; //Herbal Whispers
 $carafe: #5c4e3b; //Carafe 
 $carafe-dark:#5c443c; //Carafe--Dark
+$twilight-zone: #161b15; //Twilight Zone
+$sage: #A0A28B; //Sage
