--- a/scss/components/_burger.scss
+++ b/scss/components/_burger.scss
@@ -11,7 +11,8 @@
     top: 20px;
     left: 20px;
     z-index: 1000;
-  
+
+    //Burger Menu Button Styling
     .burger__btn {
       background: none;
       border: none;
@@ -23,18 +24,20 @@
       align-items: center;
       width: 60px;
       height: 60px;
-  
+      
+      //Burger Menu Button Lines For Animation
       .burger__btn--line {
         display: inline-block;
-        width: 60px;
-        height: 8px;
-        margin: 1.5px 0;
+        width: 100%;
+        height: 6px;
+        margin: 5px 0;
         padding: 0;
         box-sizing: border-box;
         position: relative;
-        border-radius: 8px;
-        background-color: $primary-color;
-        box-shadow: 1px 1px darken($primary-color, 20%);
+        border-radius: 3px;
+        background-color: darken($primary-color, 7.5%);
+        box-shadow: 1px 1px 2px darken($primary-color, 15%);
+        
         cursor: pointer;
         transition: all 0.7s ease;
         z-index: 999999;
@@ -42,68 +45,182 @@
   
       &:hover .burger__btn--line {
         background-color: darken($primary-color, 20%);
-        box-shadow: 2px 2px $primary-color;
+        box-shadow: 0 2px 2px $primary-color-dark;
       }
     }
-  
+
+    //Hidden Burger Menu Styling
     .burger__hidden {
       position: fixed;
       top: -100%;
       bottom: 0;
       left: 0;
       right: 0;
-      background-color: darken($background-color, 10%);
-      display: block;
+      background-color: darken($background-color-comp-light, 10%);
       height: 100%;
       z-index: 100;
       transition: top 1s ease; 
     }
-  
+    
+    //Burger Menu Links 
     .burger__links {
       list-style: none;
       padding: 0;
       position: relative;
       top: 10%;
-  
+
+        &--item {
+          margin: 60px auto;
+          text-align: center;
+        }
+    
+        &--anchor {
+          color: $text-color;
+          font-size: 1.5rem;
+          font-weight: 600;
+          text-transform: uppercase;
+          position: relative;
+          text-decoration: none;
+          padding: 10px;
+          letter-spacing: 0.1rem;
+
+              // Links Hover Effect 
+        
+              // CSS variables for JS control.
+              --after-transform-origin: left;
+              --before-transform-origin: right;
+              --after-transform: scaleX(0);
+              --before-transform: scaleX(0);
+
+              &:after,
+              &:before {
+                content: "";
+                position: absolute;
+                width: 100%; 
+                height: 3px;
+                z-index: 9;
+                background: transparent;
+                transform: scaleX(0); 
+                transition: transform 0.7s ease; 
+              }
+
+              &:after {
+                left: 0; /* Bottom line starts from the left */
+                bottom: 0;
+                background: $primary-color-dark;
+                transform-origin: var(--after-transform-origin); /* origin controlled by JS */
+                transform: var(--after-transform); /* transform controlled by JS */
+              }
+
+              &:before {
+                right: 0; /* Top line starts from the right */
+                top: 0;
+                background: $primary-color-dark;
+                transform-origin: var(--before-transform-origin); /* origin controlled by JS */
+                transform: var(--before-transform); /* transform controlled by JS */
+              }
+
+              &:hover,
+              &:focus {
+                color: $primary-color-dark; 
+              }
+
+              /* Compression Animations */
+              &.compressing::before {
+                animation: compress-down 1s forwards; /* Top line moves down */
+              }
+
+              &.compressing::after {
+                animation: compress-up 1s forwards; /* Bottom line moves up */
+              }
+
+              /* Fade-out animation for text */
+              &.compressing {
+                animation: fadeOutText 0.5s forwards; /* Fade out text */
+              }
+
+              /* Slide-out animation for lines */
+              &.sliding-out::before,
+              &.sliding-out::after {
+                animation: slideOut 1s forwards; /* Slide out animation */
+              }
+            }
+
+
+            /* Animation Keyframes */
+
+           /* Compress-down: Top line moves down */
+            @keyframes compress-down {
+              0% {
+                transform: scaleY(1);
+                top: 0; /* Start from the top */
+              }
+              100% {
+                transform: scaleY(0);
+                top: 50%; /* Move to the middle */
+              }
+            }
+
+            /* Compress-up: Bottom line moves up */
+            @keyframes compress-up {
+              0% {
+                transform: scaleY(1);
+                bottom: 0; /* Start from the bottom */
+              }
+              100% {
+                transform: scaleY(0);
+                bottom: 50%; /* Move to the middle */
+              }
+            }
+
+            @keyframes fadeOutText {
+              0% {
+                opacity: 1;
+              }
+              100% {
+                opacity: 0;
+              }
+            }
+
+            @keyframes slideOut {
+              0% {
+                transform: scaleX(0);
+              }
+              100% {
+                transform: scaleX(1);
+              }
+
+            }  
+        }
+    //Social Links
+    .burger__socials {
+      list-style: none;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 20px;
+      
       &--item {
-        margin: 40px auto;
+        margin: 100px 0;
         text-align: center;
       }
-  
+
       &--anchor {
-        color: $meadow-morn;
-        font-size: 1.5rem;
-        text-transform: uppercase;
-        position: relative;
+        color: $primary-color;
+        font-size: 2.5rem;
+        font-weight: 600;
         text-decoration: none;
         padding: 10px;
-        letter-spacing: 0.1rem;
-  
-        &:after {
-          content: "";
-          position: absolute;
-          width: 3px;
-          height: 3px;
-          left: 0;
-          bottom: 0;
-          z-index: 9;
-          background: transparent;
-          transition: all 1s ease;
-        }
-  
+        transition: color 0.7s ease;
+
         &:hover,
         &:focus {
-          color: $primary-color-dark;
-        }
-  
-        &:hover:after,
-        &:focus:after {
-          width: 100%;
-          background: $primary-color-dark;
+          color: $text-color;
         }
       }
     }
-  
+    
+    //Burger Menu Animation
     .animated {
       .burger__btn--line {
         background-color: $primary-color-dark;
@@ -111,11 +228,11 @@
       }
   
       .top {
-        transform: translateY(10px) rotate(45deg);
+        transform: translateY(15px) rotate(45deg);
       }
   
       .bottom {
-        transform: translateY(-11px) rotate(-45deg);
+        transform: translateY(-17px) rotate(-45deg);
       }
   
       .middle {
