--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -15,7 +15,8 @@ $grey-text-color: #6b6b6b; //Shadows
 $text-color-alt: #0d0d12; //Ruined Smores
 
 //Background Colours
-$background-color: #B7B9A8; //Ash
+$background-color: #8e866b; //Wilderness
+$ash: #B7B9A8; //Ash
 
 //Background Colour Complementary Shades
 
