--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -6,93 +6,61 @@
 .hero__container--xs {
 
     /*Hero Section Layout*/
-    display: grid;
+    position: relative;
     width: 100%;
     height: 100vh;
-    margin: 0 auto;
     scroll-snap-align: start;
-    place-items: center;
     overflow: hidden;
-    grid-template-rows: 1fr auto 1fr; 
-    grid-template-columns: 1fr;
-    
-//    .hero__image {
-       
-//        img {
-//            width: 100vw;
-//            height: 800px;
-//            position: relative;
-//            background-size: cover;
-//            background-position: 50% 50%;
-//            object-fit: cover;
-//            background-blend-mode: difference;
-
-//            &::after {
-//                content: "";
-//                position: absolute;
-//                top: 0;
-//                left: 0;
-//                width: 100%;
-//                height: 800px;
-//                color: $background-color-comp-dark;
-//                opacity: 0.7;
-//                z-index: 1;
-//            }
-//        }
-
-       
-//    }
-
-
-    
+   
+       img {
+           width: 100%;
+           height: 100%;
+           object-fit: cover;
+           filter: brightness(0.6);
+            }
 
     .hero__text--h1 {
-        grid-row: 2;
-        align-self: end;
-        display: flex; 
-        justify-content: center; 
-        align-items: center; 
-        margin:  0 auto;
+        position: absolute; 
+        top: 45%; 
+        left: 50%; 
+        transform: translate(-50%, -50%); 
+        text-align: center; 
+        text-wrap: nowrap;
         font-family: $hero-font; 
-        font-size: clamp(0.8rem, 4vw, 1.8rem);
+        font-size: 1.3rem;
         font-weight: 600;
         letter-spacing: 1px;
-        text-wrap: nowrap;
-        line-height: 1.2; 
+        line-height: 0; 
         color: $text-color;
-        text-align: center; 
         overflow: hidden; 
-        position: relative; 
-        display: inline-block; 
-      }
-      
-      
-      #heroTextTop {
+        padding: 2px 2px;
+        border-radius: 10px;
+        
+        text-shadow: 1px 1px 0 rgba (52, 53, 53) ;
         text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3), 
                      2px 2px 0 rgba(0, 0, 0, 0.2); 
         filter: blur(0.3px); 
-      }
-      
-  
-      
+        }
    
     .hero__text--h2 {
-        grid-row: 3;
-        align-self: start;
-        display: flex; 
-        justify-content: center; 
-        align-items: center; 
-        margin: 0 auto;
+        position: absolute; 
+        top: 50%; 
+        left: 50%; 
+        margin-top: 50px;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        text-wrap: nowrap;
         font-family: $hero-font;
-        font-size: clamp(0.6rem, 3.5vw, 1.6rem);
-        font-weight: 400;
+        font-size: 2.2rem;
+        font-weight: 600;
         letter-spacing: .8px;
         color: $text-color;
         text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3), 
         2px 2px 0 rgba(0, 0, 0, 0.2); 
         filter: blur(0.3px); 
-    }
+        }
 
+    //Cursor Animation
     #typedText {
         overflow: hidden; 
         border-right: 0.1em solid $text-color;
@@ -107,27 +75,19 @@
         50% { border-color: $text-color; }
       }
 
-      .pattern {
-        position: relative;
-        top: var(--top);
-        left: var(--left);
-        width: var(--size);
-        height: var(--size);
-        background-color: var(--color);
-        border-radius: 0;
-        opacity: 0.8;
-    }
 
     /*Scroll Down Snap Align Icon*/
     .hero__scroll {
-        grid-row: 4;
-        display: grid;
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        text-transform: uppercase;
+        text-align: center;
         font-family: $base-font-family;
-        font-size: 1rem;
-        font-weight: 500;
+        font-size: 1.1rem;
+        font-weight: 600;
         color: $text-color;
-        justify-self: center;
-        align-self: end;
         margin-bottom: 20px;
 
         /*Scroll Down Icon Bounce Animation*/
@@ -154,15 +114,22 @@
 
         /*'Scroll Down' Text*/
         span {
-            grid-row: 1;
-            line-height: 5px;
+            position: absolute;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+
+            a {
+                text-decoration: none;
+            }
         }
 
         /*Arrow Icon Link*/
         a {
-            grid-row: 2;
-            margin-top: 7px;
-            justify-self: center;
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);  
         }
 
         /*Hide At 768px For md Breakpoint*/
@@ -178,27 +145,40 @@
     /*Hero Section Layout*/
 @include respond-to(md) {
     .hero__container--md {
-        display: grid;
-        width: 100%;
-        height: 100vh;
+        position: relative;
+        width: 100vw;
+        height: 100%;
         margin: 0 auto;
         scroll-snap-align: start;
-        place-items: center;
-        overflow: hidden;
-    
-        grid-template-rows: 1fr auto 1fr; 
-        grid-template-columns: 1fr;
-        scroll-snap-align: start;
-        place-items: center;
         overflow: hidden;
 
+            img {
+                position: absolute;
+                top: -15%;
+                left: 25%;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                object-position: 50% 50%;
+                filter:drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.5));
+                image-resolution: 2dppx;
+                image-rendering: -moz-crisp-edges;
+                aspect-ratio: 16/9;
+                
+                
+            }
+    
+
+       
+
         .hero__text--h1 {
-            grid-row: 2;
-            align-self: end;
+            position: absolute;
             margin: 0 auto;
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
+           left: 45%;
+           top: 32.5%;
+           transform: translateX(-50%);
+           text-align: center;
+           
              
             text-align: center; 
             font-family: $hero-font;
@@ -211,32 +191,34 @@
         }
     
         .hero__text--h2 {
-            grid-row: 3;
-            align-self: start;
-            display: flex; 
-            justify-content: center; 
-            align-items: center; 
+           position: absolute;
+           margin: 0 auto;
+           left: 50%;
+           top: 45%;
+           transform: translateX(-50%);
+           text-align: center;
+           text-wrap: nowrap;
             font-family: $hero-font;
-            font-size: clamp(1.2rem, 2.2vw, 2rem);
-            font-weight: 400;
-            margin-top: 10px;
+            font-size: clamp(1.5rem, 2.5vw, 2.75rem);
+            font-weight: 600;
+            line-height: 3.5rem;
             letter-spacing: 1px;
             color: $text-color;
         }
     
-        #typedTextMd {
-            overflow: hidden; 
-            border-right: 0.1em solid $text-color;
-            white-space: nowrap; 
-            margin: 0 auto; 
-            letter-spacing: 0.05em; 
-            animation: blink-caret 0.75s step-end infinite;
-          }
+        // #typedTextMd {
+        //     overflow: hidden; 
+        //     border-right: 0.1em solid $text-color;
+        //     white-space: nowrap; 
+        //     margin: 0 auto; 
+        //     letter-spacing: 0.05em; 
+        //     animation: blink-caret 0.75s step-end infinite;
+        //   }
           
-          @keyframes blink-caret {
-            from, to { border-color: transparent; }
-            50% { border-color: $text-color; }
-          }
+        //   @keyframes blink-caret {
+        //     from, to { border-color: transparent; }
+        //     50% { border-color: $text-color; }
+        //   }
     
 
         // /*Main Hero Logo Image*/
